libstream-perl (0.9.0) UNRELEASED; urgency=low

  * 'does' method in Stream::Base - not Moose yet, but at least we'll get roles
  * Stream::Mixin::Filterable renamed to Stream::In::Role::Filterable,
    Stream::Mixin::Lag renamed to Stream::In::Role::Lag,
    Stream::Mixin::Shift renamed to Stream::In::Role::Shift

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 11 Aug 2010 19:54:53 +0400

libstream-perl (0.8.6) unstable; urgency=low

  * syswrite in Stream::File

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 09 Aug 2010 18:46:01 +0400

libstream-perl (0.8.5) unstable; urgency=low

  * fix an empty commit issue in File and Log streams

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Wed, 21 Jul 2010 20:29:54 +0400

libstream-perl (0.8.4) unstable; urgency=low

  * fix race condition in Stream::Log 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Wed, 21 Jul 2010 17:56:56 +0400

libstream-perl (0.8.3) unstable; urgency=low

  * bugfix: Stream::DB::In is an input straem
  * catalog throws exceptions on unknown names

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 30 Jun 2010 13:49:23 +0400

libstream-perl (0.8.2) unstable; urgency=low

  * catalog collection packaged into /usr/share/stream instead of /etc/stream
  * Stream::Catalog::Plugin::Package implemented
  * Stream::Utils: vivify_* functions
  * Stream::Pumper::Common:
   - pump method returns number of processed items
   - support names in place of objects

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 22 Jun 2010 22:28:06 +0400

libstream-perl (0.8.1) unstable; urgency=low

  *  loading streams with multiple non-alphanumerical symbols fixed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 22 Jun 2010 13:34:21 +0400

libstream-perl (0.8.0) unstable; urgency=low

  * lazy style of stream definitions in catalog
  * Stream::Pumper and Stream::Pumper::Common
  * /usr/share/stream in catalog path