@@ -4,6 +4,7 @@ libstream-perl (0.9.0) UNRELEASED; urgency=low
   * Stream::Mixin::Filterable renamed to Stream::In::Role::Filterable,
     Stream::Mixin::Lag renamed to Stream::In::Role::Lag,
     Stream::Mixin::Shift renamed to Stream::In::Role::Shift
+  * Stream::Storage::Role::ClientList role
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 11 Aug 2010 19:54:53 +0400
 
